# mabox

./: .gitignore  README.md  delete_videos.ipynb  package-lock.json  package.json  process_dir_pictures.ipynb  process_pictures.ipynb  pyproject.toml
backend/: main.py  requirements.txt
public/: index.html
src/: App.tsx  AppViews.tsx  Mode.ts  global-styles.ts  index.tsx  picture-configs.json  styles.ts  use-websocket.ts  useKeyboardShortcuts.ts  utils.ts
src/components/Controls/: index.tsx
src/components/Gallery/: index.tsx  styles.ts
src/components/Header/: index.tsx  styles.ts
src/components/MaboxLogo/: index.tsx  styles.ts
src/components/Map/: index.tsx  styles.ts
src/components/ModeDisplay/: index.tsx  styles.tsx
src/components/ProgressBar/: index.tsx  styles.tsx
src/components/Slideshow/: index.tsx  styles.ts
src/components/StartScreen/: index.tsx  styles.ts
src/components/Timeline/: index.tsx  styles.ts
src/store/: index.ts
