[tool.poetry]
name = "photo-control-station"
version = "0.1.0"
description = ""
authors = ["Jonas Bernhard <jonasbernhard96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.4.0"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
